<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical" android:layout_width="fill_parent"
android:layout_height="fill_parent">

<!-- 文件名 -->
<TextView android:layout_width="fill_parent"
android:layout_height="wrap_content" android:text="@string/file_name" />
<EditText android:layout_width="fill_parent"
android:layout_height="wrap_content" android:id="@+id/et_file_name" />

<!-- 文件内容 -->
<TextView android:layout_width="fill_parent"
android:layout_height="wrap_content" android:text="@string/file_content" />
<EditText android:layout_width="fill_parent"
android:layout_height="wrap_content" android:minLines="3"
android:id="@+id/et_file_content" />

<!-- 保存和读取按钮，采用相对布局 -->
<RelativeLayout android:layout_width="fill_parent"
android:layout_height="wrap_content">

<!-- 保存按钮 -->
<Button android:layout_width="wrap_content"
android:layout_height="wrap_content" android:text="@string/button_file_save"
android:id="@+id/bt_save" />

<!-- 读取按钮 -->
<Button android:layout_width="wrap_content"
android:layout_height="wrap_content" android:layout_toRightOf="@id/bt_save"
android:text="@string/button_file_read" android:id="@+id/bt_read" />
</RelativeLayout>

</LinearLayout>