<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    >
    <!-- 标题左侧按钮 -->
    <LinearLayout 
        android:id="@+id/clt_imgbtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:visibility="gone"
        >
        <ImageView
            android:id="@+id/clt_iv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:src="@drawable/back"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:paddingLeft="10dip"
            android:layout_gravity="center_vertical"
            android:scaleType="centerInside"
            />
        <TextView
            android:id="@+id/clt_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textSize="15dp"
            android:layout_marginLeft="-35dip"
            android:layout_gravity="center_vertical"
            style="?android:attr/windowTitleStyle"
            />
    </LinearLayout>
    <TextView 
        android:id="@+id/clt_left_tv"
        android:layout_alignParentLeft="true"
        android:ellipsize="end"
        android:singleLine="true"
        style="?android:attr/windowTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/clt_menuTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/custom_title"
        android:textSize="20sp"
        android:layout_weight="1"
        />
    <TextView 
        android:id="@+id/clt_right_tv"
        android:layout_alignParentRight="true"
        android:ellipsize="end"
        android:singleLine="true"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textColor="#fff"
        android:layout_weight="1"
        android:visibility="gone"
        />
    <!-- 标题右侧按钮 -->
    <LinearLayout
        android:id="@+id/clt_imgbtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_alignParentRight="true"
        android:visibility="gone"
        >
        <ImageView
            android:id="@+id/clt_iv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/next"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:paddingRight="10dip"
            android:layout_gravity="center_vertical"
            android:scaleType="centerInside"
            />
        <TextView
            android:id="@+id/clt_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textSize="15sp"
            android:layout_marginLeft="-52dip"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>
</RelativeLayout>